# synthetic-data-creation

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: 01_customer_analysis.ipynb  02_account_analysis.ipynb  03_transaction_analysis.ipynb  04_full_pipeline.ipynb
scripts/: generate.py
src/config/: settings.py
src/generators/: accounts.py  customer.py  transactions.py
src/models/: account.py  customer.py  transaction.py
src/utils/: exporters.py
tests/unit/: test_exporters.py  test_generators.py
